# Rust-ETL

./: .env  .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
src/commands/: mod.rs  util.rs
src/commands/generate/: gen_csv.rs  gen_ndjson.rs  mod.rs
src/commands/transform/: mod.rs  record_handler.rs  transform_stats.rs
src/core/: db.rs  types.rs
tests/: test.rs
