[package]
name = "rust-etl"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = {version = "1.19.0", features = ["v4", "fast-rng"]}
rand = "0.9.2"
